--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
         <title> Nathan Blore's Website</title>
     </head> 
 
-<body>
+<!-- <body>
+    <ul>
+        <li>Home</li>
+        <li>About Me</li>
+        <li>Contact Me</li>
+    </ul> -->
+    
     <h1>Nathan Blore</h1> <!-- Header -->
     <h2>Developer, Analyst, Apprentice</h2>
 
