Updates to files

--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang ="en" dir="ltr">
 
     <head>
+        <link rel="stylesheet" type="text/css" href="css.css">
+        <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
         <meta charset ="utf-8">
         <title> Nathan Blore's Website</title>
     </head> 
 
-<!-- <body>
-    <ul>
-        <li>Home</li>
-        <li>About Me</li>
-        <li>Contact Me</li>
-    </ul> -->
-    
-    <h1>Nathan Blore</h1> <!-- Header -->
-    <h2>Developer, Analyst, Apprentice</h2>
+    <body>
+            <div class ="header">
+                    <h1 class ="title">Nathan Blore</h1> <!-- Header -->
+                    <h2>Developer, Analyst, Apprentice</h2>
+                    </div>
 
-    <h1>About Nathan</h1> <!-- Section -->
-    <p>This website is my personal portfolio</p>
+            <ul>
+                    <li><a class="active" href="#home">Home</a></li>
+                    <li><a href="learningblog.html">News</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+            </ul>
+
+            <p>Welcome to my personal portfolio</p>
+
 </body>
 
 </html>
