--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
         <div class ="header">
             <div class = "ddLogo">
-                    <img src="/Users/nblore/Desktop/nathan-blore-ada/images/ddLogo.png" alt = "DD logo">
+                    <img src="./images/ddLogo.png" alt = "DD logo">
             </div>
                 <div class ="headerImage">
-                    <img src="/Users/nblore/Desktop/nathan-blore-ada/images/header.jpg" alt ="header">
+                    <img src="./images/header.jpg" alt ="header">
                     
                 </div>
                 <div class ="adaLogo">
-                        <img src ="/Users/nblore/Desktop/nathan-blore-ada/images/ada.jpg" alt ="ada logo">
+                        <img src ="./images/ada.jpg" alt ="ada logo">
                 </div>
          </div>
                     <h1 class ="title">Nathan Blore</h1> <!-- Header -->
